# cfo-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  docs.yml  release.yml
cfo/: __init__.py
cfo/cli/: ai.py  budget.py  currency.py  expense.py  forecast.py  income.py  main.py  mcp.py  report.py
cfo/core/: config.py  dates.py  models.py
cfo/formatters/: __init__.py  tables.py
cfo/reports/: csv_writer.py  datasets.py  pdf_writer.py
cfo/services/: __init__.py  ai.py  ai_providers.py  budget.py  currency.py  expense.py  forecast.py  forecast_scenario.py  income.py  income_source.py  mcp_server.py
cfo/storage/: database.py  migrations.py
docs/: GLOSSARY.md  IDEAS.md  README.md
docs/adr/: ADR-0001-local-first-sqlite.md  ADR-0002-layered-service-architecture.md  ADR-0003-numbered-migrations.md  ADR-0004-multi-provider-aggregated-ai.md  ADR-0005-lazy-imports-optional-extras.md  ADR-0006-pep639-trusted-publishing.md  ADR-0007-mcp-authorization-safety.md  README.md
docs/design/: SYSTEM_DESIGN.md
docs/postmortems/: README.md
docs/prd/: PRD.md
docs/rfcs/: RFC-0001-interactive-console.md  RFC-0002-mcp-server.md
docs/runbooks/: OPERATIONS.md  RELEASE.md
docs/specs/: TS-0001-interactive-console.md  TS-0002-mcp-server.md
docs/templates/: ADR-0000-template.md  POSTMORTEM-template.md  PRD-template.md  RFC-0000-template.md  RUNBOOK-template.md  TS-0000-template.md
tests/: test_ai.py  test_budget.py  test_currency.py  test_expense.py  test_forecast.py  test_income.py  test_mcp.py  test_report.py
