[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfo-cli"
version = "0.10.0"
description = "Open-source financial CLI for freelancers, consultants, and small teams"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Xavier Potrony", email = "xavipotrony@gmail.com"}
]
keywords = ["cli", "finance", "budget", "forecasting", "cfo", "freelancer", "expense-tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "pandas>=2",
    "pydantic>=2",
    "reportlab>=4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
]
ai = [
    "anthropic>=0.25",
]
openai = [
    "openai>=1.0",
]
mcp = [
    "mcp>=0.1.0",
]
docs = [
    "mkdocs-material>=9.5",
]

[project.scripts]
cfo = "cfo.cli.main:app"

[project.urls]
Homepage = "https://github.com/Neskys/cfo-cli"
Repository = "https://github.com/Neskys/cfo-cli"
Issues = "https://github.com/Neskys/cfo-cli/issues"
Changelog = "https://github.com/Neskys/cfo-cli/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["cfo"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
